Test Org - Speridian/src/objects/BA_Task_Flow__c.object
<CustomObject>
    <description>Administration Table which Maintains List of Taskflows</description>
    <fields>
        <fullName>Ba_Entity_Name__c</fullName>
        <label>Entity Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_Chapter_Name__c</fullName>
        <label>Chapter Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_Display_Name__c</fullName>
        <description>Display Name For The Task</description>
        <label>Display Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_Task_Name__c</fullName>
        <description>Unique Name For the Task</description>
        <label>Task Name</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Task Flow</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ba_Task_Name__c</columns>
        <columns>ba_Display_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Taskflows</fullName>
        <columns>ba_Task_Name__c</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <label>All Taskflows</label>
    </listViews>
    <nameField>
        <displayFormat>BA-Task-{0000}</displayFormat>
        <label>Task Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Flows</pluralLabel>
    <recordTypes>
        <fullName>All_Taskflows</fullName>
        <active>true</active>
        <description>Default View For Taskflow Administration</description>
        <label>All Taskflows</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>